test/libyul/yulSyntaxTests/dot_trailing_function_arg.yul
{
    function x(a.) {}
}
// ----
// SyntaxError 3384: (17-19='a.'): "a." is not a valid identifier (ends with a dot).
